--- a/theme/sass/style.scss
+++ b/theme/sass/style.scss
@@ -423,6 +423,14 @@ main {
       box-shadow: 0 0 12px $color-shadow;
       max-height: calc(100vh - #{$door-padding});
     }
+
+    #poster-canvas {
+      position: relative;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+    }
   }
 
   .edito {
