--- a/theme/sass/main.scss
+++ b/theme/sass/main.scss
@@ -14,7 +14,7 @@
 
 /* DEV */
 /* - - - - - - - - - - - - - - - - - - - - - - - - */
-//@import 'config/dev';
+////@import 'config/dev';
 
 
 /*! PLUGIN */
