Mobile home Update 📱

--- a/theme/sass/style.scss
+++ b/theme/sass/style.scss
@@ -681,6 +681,11 @@ iframe {
     .content {
       width: 100%;
     }
+    .affiche {
+      position: relative;
+      height: auto;
+      min-height: 100vh;
+    }
   }
 }
 
