Mobile home Update 📱

--- a/theme/sass/style.scss
+++ b/theme/sass/style.scss
@@ -687,6 +687,7 @@ iframe {
     }
     .affiche {
       position: relative;
+      position: sticky;
       height: auto;
       min-height: 65vh;
     }
