--- a/theme/sass/config/dev.scss
+++ b/theme/sass/config/dev.scss
@@ -17,7 +17,7 @@ $color-dev-two: rgba(0, 0, 255, 0.15);
 * {
   outline: 1px solid $color-dev-two;
   outline-offset: -1px;
-  background-color: rgba(255, 255, 0, 0.1);
+  //background-color: rgba(255, 255, 0, 0.1);
   //opacity: 0.95;
 }
 
@@ -46,7 +46,7 @@ body, html {
   display: inline-block;
   position: fixed;
 
-  //z-index: 9999999;
+  z-index: 9999999;
 
   //background-color: red;
 
