Infos -> Signature update 🍌

--- a/theme/sass/style.scss
+++ b/theme/sass/style.scss
@@ -619,6 +619,16 @@ main.biennale {
 
 }
 
+.signature {
+  h1 {
+    text-transform: initial !important;
+    line-height: 100%;
+  }
+  .triple0 {
+    letter-spacing: -1.4vw;
+  }
+}
+
 
 
 
