Vote -> Added to Home Page 💀

--- a/theme/sass/style.scss
+++ b/theme/sass/style.scss
@@ -48,8 +48,8 @@ body {
   background-color: $color-tree;
 
   bottom: $door-padding;
-  //right: $door-size*2;
-  right: $door-padding;
+  right: $door-size*2;
+  //right: $door-padding;
 
   padding: $door-padding 0 0;
 
