Prog ete 2019 🍦Style Update

--- a/theme/sass/style.scss
+++ b/theme/sass/style.scss
@@ -788,10 +788,10 @@ main.biennale {
 
   #home-ete {
     .affiche {
-      min-height: 80vh;
+      //min-height: 80vh;
     }
     .edito {
-      min-height: 20vh;
+      //min-height: 20vh;
       padding: 0;
     }
   }
