update home page 😩

--- a/theme/sass/style.scss
+++ b/theme/sass/style.scss
@@ -853,7 +853,7 @@ main.biennale {
   //background-color: #fcc419;
   //z-index: 9999;
 
-  color : red;
+  //color : red;
   //font-size: 50%;
   //line-height: $door-size/2;
   text-align: center;
